# bakery-demand-analyst

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
bakery_analyst/: config.py
bakery_analyst/analysis/: service.py
bakery_analyst/api/: app.py  middleware.py  routes.py
bakery_analyst/db/: connection.py  schema.py  seed.py  seed_semi.py
bakery_analyst/db/loaders/: bakery_loader.py  weather_loader.py
bakery_analyst/models/: api_models.py  domain_models.py
bakery_analyst/pipeline/: runner.py
bakery_analyst/reporting/: charts.py  llm_client.py  prompt_builder.py  writer.py
bakery_analyst/repository/: analytics_repository.py  demand_repository.py
scripts/: download_data.py  run_api.py  seed_db.py
tests/: test_api.py  test_new_metrics.py  test_seed_sanity.py  test_semi_seed_sanity.py
