[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bakery-analyst"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["bakery_analyst*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
